--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,15 @@
 body{
-  background-color: #1c3021;
+  background-image: url(../images/background.png);
 }
+
+#welcome{
+  color: #006400;
+  text-align: center;
+  font-size: 100px;
+  font-weight: bold;
+  -webkit-text-stroke: 3px #000;
+}
+
 .card {
   width: 92px;
   height: 128px;
@@ -92,7 +101,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  border-radius: 25px;
+  border-radius:   25px;
   border: 1px dashed #21c44e;
   display: flex;
   overflow: hidden;
