--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,20 @@ body{
   background-position-x: calc(-117px - 107px * 12);
 }
 
+#percent_table{
+  position: absolute;
+  width: 200px;
+  height: 150px;
+  margin-top: 125px;
+  margin-left: 30px;
+  border-radius: 20px;
+  font-size: 55px;
+  padding-top: 20px;
+  display: block;
+  text-align: center;
+  background-color: #35cc0c;
+}
+
 .result{
   position: absolute;
   background-color: #f5b642;
