--- a/css/styles.css
+++ b/css/styles.css
@@ -197,3 +197,57 @@ body{
   font-weight: bold;
   padding: 30px;
 }
+
+
+@media screen and (max-width: 960px){
+#table{
+  position: relative;
+  width: calc(100% - 30px);
+  height: 350px;
+  margin: 50px auto;
+  background: #177a32;
+  border-radius: 5px;
+  border: 1px dashed #21c44e;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#actions {
+  background: #e6d38a;
+  width: calc(100% - 30px);
+  height: 70px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  background: #42b04e;
+  box-sizing: border-box;
+  padding: 5px 30px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 10px;
+  margin: 23px 10px 0;
+  box-shadow: 0 3px 3px rgba(0,0,0,0.5);
+}
+}
+
+@media screen and (max-width: 700px){
+.result{
+  position: absolute;
+  background-color: #f5b642;
+  height: 30px;
+  width: 100px;
+  margin-top: 55px;
+  margin-left: 30px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 15px;
+  padding-top: 7px;
+}
+}
