--- a/css/styles.css
+++ b/css/styles.css
@@ -70,14 +70,13 @@ body{
 }
 
 #percent_table{
-  position: absolute;
-  width: 200px;
-  height: 150px;
-  margin-top: 125px;
-  margin-left: 30px;
-  border-radius: 20px;
-  font-size: 55px;
-  padding-top: 20px;
+  position: relative;
+  width:200px;
+  height: 40px;
+  margin: 0 auto;
+  border-radius: 10px;
+  font-size: 30px;
+  padding-top: 10px;
   display: block;
   text-align: center;
   background-color: #35cc0c;
@@ -101,7 +100,7 @@ body{
   position: relative;
   width: 960px;
   height: 400px;
-  margin: 50px auto;
+  margin: 20px auto;
   background: #177a32;
   border-radius: 5px;
   border: 1px dashed #21c44e;
