--- a/css/styles.css
+++ b/css/styles.css
@@ -251,3 +251,40 @@ body{
   padding-top: 7px;
 }
 }
+
+@media screen and (max-height: 600px){
+  #table{
+    position: relative;
+    width: 800px;
+    height: 350px;
+    margin: 50px auto;
+    background: #177a32;
+    border-radius: 5px;
+    border: 1px dashed #21c44e;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #actions {
+    background: #e6d38a;
+    width: 800px;
+    height: 50px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .btn {
+    display: inline-block;
+    text-decoration: none;
+    background: #42b04e;
+    box-sizing: border-box;
+    padding: 5px 30px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 10px;
+    margin: 13px 10px 0;
+    box-shadow: 0 3px 3px rgba(0,0,0,0.5);
+  }
+}
