--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,11 @@ body{
   width: 200px;
   height: 50px;
   background-color: #0da326;
-  font-size: 30px;
+  font-size: 22px;
   box-sizing: border-box;
   padding-top: 10px;
   margin: 0 auto;
+  text-align: center;
   border-radius: 10px;
 }
 
@@ -129,7 +130,7 @@ body{
 
 #blackjack_wrapper h6 {
   text-align: center;
-  font-size: 25px;
+  font-size: 22px;
 }
 #dealer, #player{
   height: 128px;
